--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "4.1.0",
     "@truffle/hdwallet-provider": "^1.4.0",
-    "web3": "1.3.4"
+    "web3": "1.3.4",
+    "@uniswap/lib": "^4.0.1-alpha"
   },
   "main": "truffle-config.js",
   "directories": {
