--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
   "dependencies": {
     "@openzeppelin/contracts": "4.1.0",
     "@truffle/hdwallet-provider": "^1.4.0",
-    "web3": "1.3.4",
-    "@uniswap/lib": "^4.0.1-alpha"
+    "@uniswap/lib": "^4.0.1-alpha",
+    "dotenv": "^10.0.0",
+    "web3": "1.3.4"
   },
   "main": "truffle-config.js",
+  "scripts": {
+    "dev": "lite-server"
+  },
   "directories": {
     "test": "test"
+  },
+  "devDependencies": {
+    "lite-server": "^2.6.1"
   }
 }
