--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "dependencies": {
     "@chainlink/contracts": "^0.2.1",
     "@openzeppelin/contracts": "4.1.0",
+    "@truffle/contract": "^4.3.26",
     "@truffle/hdwallet-provider": "^1.4.0",
     "@uniswap/lib": "^5.0.0-alpha",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "dotenv": "^10.0.0",
     "web3": "1.3.4"
   },
