--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "@truffle/contract": "^4.3.26",
     "@truffle/hdwallet-provider": "^1.4.0",
     "@uniswap/lib": "^5.0.0-alpha",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^10.0.0",
