--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^10.0.0",
+    "prb-math": "^2.2.0",
     "web3": "1.3.4"
   },
   "main": "truffle-config.js",
